--- a/portfolio.html
+++ b/portfolio.html
@@ -28,9 +28,9 @@
       <h1>Portfolio</h1>
 
       <div class="work">
-        <img src="assets/images/technics-q-c-640-480-1.jpg" alt="hangman">
+        <img src="assets/images/CrystalCollector.PNG" alt="CrystalCollector" height=205.5px>
 
-        <h3>Hangman</h3>
+        <h3>Crystal Collector</h3>
       </div>
       <div class="work">
         <img src="assets/images/technics-q-c-640-480-2.jpg" alt="RPG Game">
