linked the h3 to the github pages for CrystalCollector set to open in new tab

--- a/portfolio.html
+++ b/portfolio.html
@@ -30,7 +30,7 @@
       <div class="work">
         <img src="assets/images/CrystalCollector.PNG" alt="CrystalCollector" height=205.5px>
 
-        <h3>Crystal Collector</h3>
+        <a href="https://throwback74.github.io/unit-4-game/" target="_blank"><h3>Crystal Collector</h3></a>
       </div>
       <div class="work">
         <img src="assets/images/technics-q-c-640-480-2.jpg" alt="RPG Game">
