--- a/portfolio.html
+++ b/portfolio.html
@@ -33,9 +33,9 @@
         <a href="https://throwback74.github.io/unit-4-game/" target="_blank"><h3>Crystal Collector</h3></a>
       </div>
       <div class="work">
-        <img src="assets/images/technics-q-c-640-480-2.jpg" alt="RPG Game">
-
-        <h3>RPG Game</h3>
+        <img src="assets/images/giphy3.png" alt="Giphy API">
+        <a href="https://throwback74.github.io/giphy-HW/" target="_blank">
+        <h3>GIF Search - Powered by Giphy</h3></a>
       </div>
       <div class="work">
         <img src="assets/images/technics-q-c-640-480-5.jpg" alt="Trivia Game">
