--- a/portfolio.html
+++ b/portfolio.html
@@ -38,9 +38,9 @@
         <h3>GIF Search - Powered by Giphy</h3></a>
       </div>
       <div class="work">
-        <img src="assets/images/technics-q-c-640-480-5.jpg" alt="Trivia Game">
-
-        <h3>Trivia Game</h3>
+        <img src="assets/images/TrainSchedule.PNG" alt="Train Schedule">
+        <a href="https://throwback74.github.io/TrainScheduler-Firebase/" target="_blank">
+        <h3>Train Schedule</h3>
       </div>
       <div class="work">
         <img src="assets/images/technics-q-c-640-480-7.jpg" alt="Info Widget">
